trying to fix map not showing on iPhone

--- a/spn/videoTest/css/main.css
+++ b/spn/videoTest/css/main.css
@@ -437,6 +437,7 @@ img.badge{
   width: 100%;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
+  -webkit-overflow-scrolling: touch;
 }
 .contact-text{
   width: 44%;
