--- a/spn/videoTest/css/responsive.css
+++ b/spn/videoTest/css/responsive.css
@@ -645,7 +645,7 @@ and (orientation : landscape){
     }
     #watchBtn{
 	 left:40px;
-	 top:110px;
+	 top:97px;
 	 font-size: 16px;
 	 font-weight: 400; 
 	 border:3px #fff solid;
@@ -668,7 +668,9 @@ and (orientation : landscape){
 
 
 
-
+/*--------------------------------------------------------------------------WARNING-----SUPER MESSY*/
+/*-------------------------------------------------------------------------YEAH I KNOW ITS A COMPLETE MESS DOWN HERE*/
+/*--------------------------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------------------------*/
 @media only screen and (max-width: 767px){
 	.banner .bloco-destaque{
@@ -751,9 +753,6 @@ and (orientation : landscape){
     	display: none;
     }
 }
-/*--------------------------------------------------------------------------WARNING-----SUPER MESSY*/
-/*-------------------------------------------------------------------------YEAH I KNOW ITS A COMPLETE MESS DOWN HERE*/
-/*--------------------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------------------Real life experiences section*/
 /*--------------------------------------------------------------------------------------------------------------*/
 @media(max-width: 1000px) {
